-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0.28, 10.1.19
-
Component/s: Storage Engine - XtraDB
-
Labels:None
-
Sprint:10.0.29
To reproduce:
- create a new datadir using MariaDB 10.0.27;
- start current 10.0 server (e.g. 37f294fec2) on the datadir with --innodb-read-only, otherwise default options
2016-12-30 20:03:35 7fa7c69f9780 InnoDB: Assertion failure in thread 140358568613760 in file mtr0mtr.cc line 326
|
InnoDB: Failing assertion: !srv_read_only_mode
|
InnoDB: We intentionally generate a memory trap.
|
|
#5 0x00007fa7c46f0448 in __GI_abort () at abort.c:89
|
#6 0x0000000000a9a800 in mtr_commit (mtr=0x7ffc5057b930) at /data/src/10.0/storage/xtradb/mtr/mtr0mtr.cc:326
|
#7 0x0000000000c0d7fc in dict_hdr_get_new_id (table_id=0x7fa7b2b8c8f8, index_id=0x0, space_id=0x0) at /data/src/10.0/storage/xtradb/dict/dict0boot.cc:108
|
#8 0x0000000000c12afa in dict_build_table_def_step (thr=0x7fa7c3c9f5c8, node=0x7fa7c3c9dad0) at /data/src/10.0/storage/xtradb/dict/dict0crea.cc:270
|
#9 0x0000000000c142f4 in dict_create_table_step (thr=0x7fa7c3c9f5c8) at /data/src/10.0/storage/xtradb/dict/dict0crea.cc:1045
|
#10 0x0000000000ad07d5 in que_thr_step (thr=0x7fa7c3c9f5c8) at /data/src/10.0/storage/xtradb/que/que0que.cc:1097
|
#11 0x0000000000ad096f in que_run_threads_low (thr=0x7fa7c3c9f5c8) at /data/src/10.0/storage/xtradb/que/que0que.cc:1151
|
#12 0x0000000000ad0afb in que_run_threads (thr=0x7fa7c3c9f5c8) at /data/src/10.0/storage/xtradb/que/que0que.cc:1192
|
#13 0x0000000000ad0d80 in que_eval_sql (info=0x0, sql=0x1004288 "PROCEDURE CREATE_SYS_ZIP_DICT_PROC () IS\nBEGIN\nCREATE TABLE SYS_ZIP_DICT(\n ID INT UNSIGNED NOT NULL,\n NAME CHAR(64) NOT NULL,\n DATA BLOB NOT NULL\n);\nCREATE UNIQUE CLUSTERED INDEX SYS_ZIP_DICT_ID ON"..., reserve_dict_mutex=0, trx=0x7fa7c3c56278) at /data/src/10.0/storage/xtradb/que/que0que.cc:1275
|
#14 0x0000000000c16021 in dict_create_or_check_sys_zip_dict () at /data/src/10.0/storage/xtradb/dict/dict0crea.cc:2017
|
#15 0x0000000000b66ab7 in innobase_start_or_create_for_mysql () at /data/src/10.0/storage/xtradb/srv/srv0start.cc:2780
|
#16 0x0000000000a0ff29 in innobase_init (p=0x7fa7c3e02e70) at /data/src/10.0/storage/xtradb/handler/ha_innodb.cc:4138
|
#17 0x00000000008339e2 in ha_initialize_handlerton (plugin=0x7fa7c3dfc4c8) at /data/src/10.0/sql/handler.cc:501
|
#18 0x000000000065bbda in plugin_initialize (tmp_root=0x7ffc5057fea0, plugin=0x7fa7c3dfc4c8, argc=0x17891f0 <remaining_argc>, argv=0x7fa7c3c23420, options_only=false) at /data/src/10.0/sql/sql_plugin.cc:1379
|
#19 0x000000000065c405 in plugin_init (argc=0x17891f0 <remaining_argc>, argv=0x7fa7c3c23420, flags=0) at /data/src/10.0/sql/sql_plugin.cc:1602
|
#20 0x000000000058e5e7 in init_server_components () at /data/src/10.0/sql/mysqld.cc:4836
|
#21 0x000000000058f620 in mysqld_main (argc=12, argv=0x7fa7c3c23420) at /data/src/10.0/sql/mysqld.cc:5429
|
#22 0x0000000000586016 in main (argc=12, argv=0x7ffc505803a8) at /data/src/10.0/sql/main.cc:25
|
Same for 10.1 (e.g. 545c91269) started on 10.1.18.
Non-debug build also fails, but with a different assertion failure:
10.0 37f294fec |
2016-12-30 20:28:46 7feae9193780 InnoDB: Assertion failure in thread 140646909818752 in file trx0rec.cc line 1242
|
InnoDB: Failing assertion: DICT_TF2_FLAG_IS_SET(index->table, DICT_TF2_TEMPORARY)
|
|
#4 0x00007feae7b4e448 in __GI_abort () at abort.c:89
|
#5 0x00000000009ab435 in trx_undo_report_row_operation (flags=flags@entry=0, op_type=op_type@entry=1, thr=thr@entry=0x7fead63695b8, index=index@entry=0x7feae72037e8, clust_entry=clust_entry@entry=0x7fead634eb68, update=update@entry=0x0, cmpl_info=0, rec=0x0, offsets=0x0, roll_ptr=0x7fffae0fcee8) at /data/src/10.0/storage/xtradb/trx/trx0rec.cc:1242
|
#6 0x00000000009dda85 in btr_cur_ins_lock_and_undo (inherit=0x7fffae0fcee0, mtr=0x7fffae0fd360, thr=0x7fead63695b8, entry=0x7fead634eb68, cursor=0x7fffae0fcfc0, flags=0) at /data/src/10.0/storage/xtradb/btr/btr0cur.cc:1279
|
#7 btr_cur_optimistic_insert (flags=flags@entry=0, cursor=cursor@entry=0x7fffae0fcfc0, offsets=offsets@entry=0x7fffae0fcf90, heap=heap@entry=0x7fffae0fcfa0, entry=entry@entry=0x7fead634eb68, rec=rec@entry=0x7fffae0fd040, big_rec=0x7fffae0fcf98, n_ext=0, thr=0x7fead63695b8, mtr=0x7fffae0fd360) at /data/src/10.0/storage/xtradb/btr/btr0cur.cc:1503
|
#8 0x000000000095fe8f in row_ins_clust_index_entry_low (flags=flags@entry=0, mode=mode@entry=2, index=index@entry=0x7feae72037e8, n_uniq=n_uniq@entry=1, entry=entry@entry=0x7fead634eb68, n_ext=n_ext@entry=0, thr=0x7fead63695b8) at /data/src/10.0/storage/xtradb/row/row0ins.cc:2524
|
#9 0x0000000000960eeb in row_ins_clust_index_entry (index=index@entry=0x7feae72037e8, entry=0x7fead634eb68, thr=thr@entry=0x7fead63695b8, n_ext=n_ext@entry=0) at /data/src/10.0/storage/xtradb/row/row0ins.cc:2954
|
#10 0x000000000096156c in row_ins_index_entry (thr=0x7fead63695b8, entry=<optimized out>, index=0x7feae72037e8) at /data/src/10.0/storage/xtradb/row/row0ins.cc:3052
|
#11 row_ins_index_entry_step (thr=0x7fead63695b8, node=<optimized out>) at /data/src/10.0/storage/xtradb/row/row0ins.cc:3129
|
#12 row_ins (thr=<optimized out>, node=<optimized out>) at /data/src/10.0/storage/xtradb/row/row0ins.cc:3269
|
#13 row_ins_step (thr=thr@entry=0x7fead63695b8) at /data/src/10.0/storage/xtradb/row/row0ins.cc:3394
|
#14 0x0000000000949250 in que_thr_step (thr=0x7fead63695b8) at /data/src/10.0/storage/xtradb/que/que0que.cc:1069
|
#15 que_run_threads_low (thr=0x7fead63695b8) at /data/src/10.0/storage/xtradb/que/que0que.cc:1151
|
#16 que_run_threads (thr=<optimized out>) at /data/src/10.0/storage/xtradb/que/que0que.cc:1192
|
#17 0x0000000000949842 in que_eval_sql (info=info@entry=0x0, sql=sql@entry=0xdd4b38 "PROCEDURE CREATE_SYS_ZIP_DICT_PROC () IS\nBEGIN\nCREATE TABLE SYS_ZIP_DICT(\n ID INT UNSIGNED NOT NULL,\n NAME CHAR(64) NOT NULL,\n DATA BLOB NOT NULL\n);\nCREATE UNIQUE CLUSTERED INDEX SYS_ZIP_DICT_ID ON"..., reserve_dict_mutex=reserve_dict_mutex@entry=0, trx=trx@entry=0x7feae7036968) at /data/src/10.0/storage/xtradb/que/que0que.cc:1275
|
#18 0x0000000000a1cc8f in dict_create_or_check_sys_zip_dict () at /data/src/10.0/storage/xtradb/dict/dict0crea.cc:2017
|
#19 0x000000000099987a in innobase_start_or_create_for_mysql () at /data/src/10.0/storage/xtradb/srv/srv0start.cc:2780
|
#20 0x00000000008ccf6d in innobase_init (p=<optimized out>) at /data/src/10.0/storage/xtradb/handler/ha_innodb.cc:4138
|
#21 0x0000000000736b3e in ha_initialize_handlerton (plugin=0x7feae71b0460) at /data/src/10.0/sql/handler.cc:501
|
#22 0x00000000005d0015 in plugin_initialize (tmp_root=tmp_root@entry=0x7fffae105a90, plugin=plugin@entry=0x7feae71b0460, argc=argc@entry=0x1422198 <remaining_argc>, argv=argv@entry=0x7feae702c2b8, options_only=options_only@entry=false) at /data/src/10.0/sql/sql_plugin.cc:1379
|
#23 0x00000000005d1240 in plugin_init (argc=argc@entry=0x1422198 <remaining_argc>, argv=0x7feae702c2b8, flags=0) at /data/src/10.0/sql/sql_plugin.cc:1602
|
#24 0x0000000000529085 in init_server_components () at /data/src/10.0/sql/mysqld.cc:4836
|
#25 0x000000000052ec56 in mysqld_main (argc=12, argv=0x7feae702c2b8) at /data/src/10.0/sql/mysqld.cc:5429
|
#26 0x00007feae7b39b45 in __libc_start_main (main=0x515040 <main(int, char**)>, argc=12, argv=0x7fffae106668, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffae106658) at libc-start.c:287
|
#27 0x0000000000524381 in _start ()
|